--- a/sobre.html
+++ b/sobre.html
@@ -13,7 +13,7 @@
     <nav id="menu">
         <ul>
             <li>
-                <a href="main.html">Inicio</a>
+                <a href="index.html">Inicio</a>
             </li>
             <li>
                 <a href="sobre.html">Sobre</a>
