--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
 
 <section class="grid-container">
     <div class="video-card">
-            <h2>Vídio de divulgação.</h2>
+            <h2>Vídeos de divulgação.</h2>
             <iframe src="https://drive.google.com/file/d/1QT-wOHUvvXT44BmcwjXRtqqYJ3RX_OLE/preview" allow="autoplay"></iframe>
             <p>Campanha de arrecadação de brinquedos.</p>
     </div>
 
     <div class="video-card">
-            <h2>Vídio de divulgação.</h2>
+            <h2>Vídeos de divulgação.</h2>
             <iframe src="https://drive.google.com/file/d/1K_LKAv0_bSioU8dQf-m2_TcB8__UWKrK/preview" allow="autoplay"></iframe>
             <p>Campanha eleitoral</p>
     </div>
