--- a/sobre.html
+++ b/sobre.html
@@ -33,12 +33,12 @@
     <div class="sobre-content">
         <img src="imagem/foto.jpg" alt="Sua Foto" class="profile-pic">
         <div class="sobre-text">
-            <p>Olá! Eu sou a Ana Paula, um criadora de vídeos apaixonado por contar histórias através de imagens e sons.
+            <p>Olá! Eu sou a Ana Paula, um criadora de vídeos apaixonada por contar histórias através de imagens e sons.
                 Tenho experiência em edição de vídeos para plataformas como YouTube, Reels e TikTok, além de expertise
                 em edição de vídeos longos e narrativas complexas.</p>
             <p>Com uma habilidade especial para transformar ideias em vídeos cativantes, estou sempre buscando novas
                 formas de inovar e capturar a atenção do público. Meu portfólio inclui vídeos verticais dinâmicos para
-                redes sociais e projetos mais longos e profundos para o YouTube. Estou pronto para colaborar em projetos
+                redes sociais e projetos mais longos e profundos para o YouTube. Estou pronta para colaborar em projetos
                 criativos que precisam de um toque visual impactante.</p>
                 <a href="https://www.linkedin.com/in/ana-paula-de-oliveira-382546a0/" target="_blank">Linkedin</a>
         </div>
