--- a/videos.html
+++ b/videos.html
@@ -45,7 +45,7 @@
         <div class="video-card">
             <h2>Revil de The Last of us</h2>
             <iframe src="https://drive.google.com/file/d/1UsWCM6bDKQLExhCDwjHO39fyjFO4t3BC/preview" allow="autoplay"></iframe>
-            <p>Reação do segundo episodio da serie de The Last of us, correção de cor, cortes, sobrepoções.</p>
+            <p>Reação do 2º episodio da serie de The Last of us, correção de cor, cortes, sobreposição.</p>
         </div>
 
         <div class="video-card">
